# deepmapper

./: .gitignore  .zenodo.json  404.html  CITATION.cff  LICENSE  NOTICE  README.md  deepmapper_pytorch-TCGAData.ipynb  deepmapper_pytorch-proof-of-concept.ipynb  deepmapper_pytorch.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytorch-mnist-resnet18-shuffle-demo.ipynb  pytorch_deepinsight_run_and_data_prep.ipynb  requirements-bio.txt  requirements-ml.txt  requirements.txt  setup.py  sitemap.xml
.claude/skills/deepmapper/: SKILL.md
.github/workflows/: docs.yml  release.yml
REPRODUCIBILITY/: index.html
USER_MANUAL/: index.html
api/: index.html
bench/: README.md  backbone_headtohead.py  gene_chord_honest.py  hvg_ribosomal_rank.py  mouse_dm_run.py  mouse_phase2_dpt.py  ncrna_chord.py  ncrna_chord_biotype.py  passes_and_determinism.py  review_controls.py  ribosomal_validation.py
bench/c5_kang/: c5_kang_analysis.py  c5_kang_donor_isg.py
bench/independent_validation/: antisense_enrichment_null.py  antisense_overlap_control.py  exhaustion_til_vs_blood.py  exhaustion_vs_score.py  lncrna_antisense.py
claude-skill/: index.html
data-sources/: index.html
docs/: REPRODUCIBILITY.md  USER_MANUAL.md  api.md  claude-skill.md  data-sources.md  index.md
examples/data/: curatedTCGAData_RNASeq2GeneNorm-20160128.txt
pyDeepMapper/: __init__.py  deep_mapper.py
pyDeepMapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pydeepmapper/: __init__.py  accumulate.py  attribution.py  augment.py  backbones.py  config.py  earlystop.py  evaluate.py  hybrid_assembly.py  io.py  linear_baseline.py  plots.py  runner.py  transform.py  unsupervised.py
scripts/: download_data.sh
search/: search_index.json
tests/: test_accumulate.py  test_earlystop.py  test_hybrid_assembly.py  test_transform.py
